# gpu-inference-platform

./: .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: config.py  health.py  main.py  metrics.py  preprocessing.py  schemas.py  triton_client.py
benchmarks/: analyze_results.py  run_backend_comparison.py  run_preprocess_benchmark.py
benchmarks/results/: README.md  backend_comparison.md
cuda_preprocess/: CMakeLists.txt  __init__.py  bindings.cpp  preprocess.cpp  preprocess_kernel.cu  setup.py
cuda_preprocess/tests/: test_preprocess.py
docker/: api.Dockerfile
docs/: architecture.md  kubernetes_deployment.md  model_export.md  observability.md  resume_bullets.md  triton_config.md
k8s/: api-deployment.yaml  api-service.yaml  dcgm-exporter-daemonset.yaml  grafana-dashboard.json  grafana-deployment.yaml  hpa-api.yaml  namespace.yaml  prometheus-config.yaml  prometheus-deployment.yaml  triton-deployment.yaml  triton-service.yaml
model_repository/resnet50_onnx/: config.pbtxt
model_repository/resnet50_trt/: config.pbtxt
models/: build_tensorrt.py  export_onnx.py  validate_model.py
profiling/: README.md  nsight_compute_commands.md  nsight_systems_commands.md
scripts/: build_all.sh  build_tensorrt.sh  cleanup_k8s.sh  deploy_k8s.sh  download_sample_images.sh  run_triton_local.sh  setup_env.sh
tests/: test_api.py  test_health.py  test_preprocessing.py  test_triton_client.py
